--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "react-native-screens": "~4.10.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@react-native-community/cli": "^15.1.3"
