--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "react-native": "0.79.2",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "swiper": "^11.2.1",
-    "react-native-screens": "~4.10.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-svg": "15.11.2"
+    "react-native-webview": "^13.13.5",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@react-native-community/cli": "^15.1.3"
